--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
+nav {
+    text-align: center;
+}
+
+nav ul {
+    display: inline-block;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li:last-child {
+    margin-right: 0;
+}
+
+/* Update the center class to center the text */
+.center {
+    text-align: center;
+}
 /* Global styles */
 body {
     font-family: Arial, sans-serif;
