--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     z-index: 1000;
     transition: background-color 0.3s ease, opacity 0.3s ease;
     display: flex;
-    justify-content: center;
+    flex-direction: column; /* Display logo and links vertically on mobile */
     align-items: center;
     padding: 10px 0;
 }
@@ -19,28 +19,32 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 0;
+    width: 100%; /* Ensure container takes full width */
 }
 
 .top-nav h1.logo {
     font-size: 1.5rem;
-    margin: 0; /* Remove margin to center logo */
+    margin: 0;
+    order: 2; /* Place the logo below the links on mobile */
 }
 
 .top-nav ul.nav-links {
     list-style: none;
     display: flex;
+    flex-direction: column; /* Display links vertically on mobile */
     margin: 0;
     padding: 0;
     justify-content: center;
     align-items: center; /* Center the links vertically */
+    order: 1; /* Place the links above the logo on mobile */
 }
 
 .top-nav ul.nav-links li {
-    margin-right: 20px;
+    margin-bottom: 10px; /* Add space between links on mobile */
 }
 
 .top-nav ul.nav-links li:last-child {
-    margin-right: 0;
+    margin-bottom: 0;
 }
 
 .top-nav ul.nav-links a {
