--- a/styles.css
+++ b/styles.css
@@ -7,44 +7,37 @@
     left: 0;
     right: 0;
     z-index: 1000;
-    transition: background-color 0.3s ease, opacity 0.3s ease;
     display: flex;
-    flex-direction: column; /* Display logo and links vertically on mobile */
+    justify-content: space-between;
     align-items: center;
-    padding: 10px 0;
+    padding: 10px;
 }
 
 .top-nav .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 0;
-    width: 100%; /* Ensure container takes full width */
+    width: 100%;
 }
 
 .top-nav h1.logo {
     font-size: 1.5rem;
     margin: 0;
-    order: 2; /* Place the logo below the links on mobile */
 }
 
 .top-nav ul.nav-links {
     list-style: none;
     display: flex;
-    flex-direction: column; /* Display links vertically on mobile */
     margin: 0;
     padding: 0;
-    justify-content: center;
-    align-items: center; /* Center the links vertically */
-    order: 1; /* Place the links above the logo on mobile */
 }
 
 .top-nav ul.nav-links li {
-    margin-bottom: 10px; /* Add space between links on mobile */
+    margin-right: 20px;
 }
 
 .top-nav ul.nav-links li:last-child {
-    margin-bottom: 0;
+    margin-right: 0;
 }
 
 .top-nav ul.nav-links a {
